--- a/Lesson 2 Countries/package.json
+++ b/Lesson 2 Countries/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "practice2",
+  "name": "countries",
   "version": "1.0.0",
   "description": "",
-  "main": "Server/server.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon Server/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-sanitizer": "^1.0.5",
     "mysql": "^2.18.1",
