--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Lesson 1 NodeJs MySQL/
 Lesson 1 NodeJs MySQL_/node_modules/
 
 Lesson 2 Countries/node_modules/
+Lesson 2 Countries/Server/Database/password.js
