--- a/Lesson 2 Countries/package.json
+++ b/Lesson 2 Countries/package.json
@@ -2,10 +2,9 @@
   "name": "countries",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "Server/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon Server/server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
