adding Lesson 3 Sequelizer

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ Lesson 1 NodeJs MySQL_/node_modules/
 
 Lesson 2 Countries/node_modules/
 Lesson 2 Countries/Server/Database/password.js
+
+Lesson 3 Sequelizer/node_modules/
+Lesson 3 Sequelizer/Server/Database/password.js
