change folder names

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-Lesson 1 NodeJs MySQL/
-Lesson 1 NodeJs MySQL_/node_modules/
+Lesson_1_NodeJs_MySQL/
+Lesson_1_NodeJs_MySQL_/node_modules/
 
-Lesson 2 Countries/node_modules/
-Lesson 2 Countries/Server/Database/password.js
+Lesson_2_Countries/node_modules/
+Lesson_2_Countries/Server/Database/password.js
 
-Lesson 3 Sequelizer/node_modules/
-Lesson 3 Sequelizer/Server/Database/password.js
+Lesson_3_Sequelizer/node_modules/
+Lesson_3_Sequelizer/Server/Database/password.js
