--- a/practice/package.json
+++ b/practice/package.json
@@ -2,7 +2,7 @@
   "name": "practice",
   "version": "1.0.0",
   "description": "",
-  "main": "Server/index.js",
+  "main": "server/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,9 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-sanitizer": "^1.0.5",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.3.5"
+    "nodemon": "^2.0.7",
+    "sequelize": "^6.4.0"
   }
 }
